@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class Author{
    - id
    - name
    - shortBio
    + getVersion()
    Author(name, shortBio)
}

class AuthorPhoto{
    - id
    - image
    - contentType
    AuthorPhoto(Long id,byte image,String contentType)
}

class AuthorController
{
    + createAuthor(final EditAuthorRequest resource,MultipartFile authorPhoto)
}
class AuthorServiceImpl
{
    + createAuthor(resource,authorPhoto)
    + validateCreateAuthorRequest(request, id, resource)
}
class AuthorViewMapper
{
    + toAuthorView(author)
}

class EditAuthorMapper
{
    + create(resource)
}

class AuthorRepository
{
    + save(author)
}

class EditAuthorRequest
{
    - name
    - shortBio
}

AuthorController ..> AuthorServiceImpl
AuthorController ..> AuthorViewMapper
AuthorServiceImpl ..> EditAuthorMapper
AuthorServiceImpl ..> AuthorRepository
EditAuthorMapper ..> EditAuthorRequest
AuthorController ..> Author
AuthorServiceImpl ..> Author
EditAuthorRequest ..> Author
AuthorRepository "1" --> "0..*" Author: records
Author "1" *-- "1" AuthorPhoto

@enduml
